# ail

./: .editorconfig  .env.example  .envrc  .gitignore  README.md  default.nix  justfile  pyproject.toml
app/: __init__.py  __main__.py  api.py  app.py  args.py  commands.py  data.py  logging.py  model.py  state.py  tokenizer.py  tools.py
data/: fortress_aircon.json  fortress_refrigerator.json  fortress_vacuum.json  prompt
data/processed/: aircon.txt  fortress_aircon.txt  fortress_refrigerator.txt  fortress_vacuum.txt  refrigerator.txt
data/semiraw/: fortress_aircon.json  fortress_refrigerator.json  fortress_vacuum.json
src/: prompt.md
src/kb/: fortress_aircon.txt  fortress_refrigerator.txt  fortress_vacuum.txt
src/scripts/: fortress.py  fortress.sh
utils/: format_to_command-r.py  fortress.py
